--- a/angular.json
+++ b/angular.json
@@ -3,23 +3,23 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "forms": {
+    "forms42angular": {
       "projectType": "library",
-      "root": "projects/forms",
-      "sourceRoot": "projects/forms/src",
+      "root": "projects/forms42angular",
+      "sourceRoot": "projects/forms42angular/src",
       "prefix": "lib",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/forms/ng-package.json"
+            "project": "projects/forms42angular/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/forms/tsconfig.lib.prod.json"
+              "tsConfig": "projects/forms42angular/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/forms/tsconfig.lib.json"
+              "tsConfig": "projects/forms42angular/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -27,9 +27,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/forms/src/test.ts",
-            "tsConfig": "projects/forms/tsconfig.spec.json",
-            "karmaConfig": "projects/forms/karma.conf.js"
+            "main": "projects/forms42angular/src/test.ts",
+            "tsConfig": "projects/forms42angular/tsconfig.spec.json",
+            "karmaConfig": "projects/forms42angular/karma.conf.js"
           }
         }
       }
@@ -133,5 +133,5 @@
       }
     }
   },
-  "defaultProject": "forms"
+  "defaultProject": "forms42angular"
 }
